custom-resource-consumers/takeout/apps/crypto/btc-balance-notifier/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: btc-balance-notifier
  namespace: crypto
  annotations:
    reloader.stakater.com/auto: "true"
  labels:
    app: btc-balance-notifier
spec:
  replicas: 1
  serviceName: btc-balance-notifier
  selector:
    matchLabels:
      app: btc-balance-notifier
  template:
    metadata:
      labels:
        app: btc-balance-notifier
    spec:
      containers:
      - name: btc-balance-notifier
        image: docker.io/tyzbit/bitcoin-balance-notifier:0.5.0 # {"$imagepolicy": "flux-system:bitcoin-balance-notifier"}
        # image: docker.io/tyzbit/bitcoin-balance-notifier:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        volumeMounts:
        - name: bitcoin-balance-notifier-data-longhorn-database
          mountPath: /db
        resources:
          requests:
            cpu: 200m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 64Mi
      volumes:
      - name: bitcoin-balance-notifier-data-longhorn-database
        persistentVolumeClaim:
          claimName: bitcoin-balance-notifier-data-longhorn-database
      imagePullSecrets:
      - name: docker-hub
