custom-resource-consumers/takeout/apps/crypto/btc-balance-notifier/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: btc-balance-notifier
  namespace: crypto
spec:
  type: NodePort
  externalTrafficPolicy: Local
  selector:
    app: btc-balance-notifier
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
