custom-resource-consumers/takeout/apps/crypto/btc-balance-notifier/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: btc-balance-notifier
  namespace: crypto
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    acme.cert-manager.io/http01-edit-in-place: "false"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-body-size: "40g"
    nginx.ingress.kubernetes.io/auth-url: "http://btc-balance-notifier-oauth2-proxy.crypto.svc.cluster.local/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    external-dns.alpha.kubernetes.io/target: ${personal_domain_ddns}
spec:
  tls:
    - hosts:
        - &host "balance.${personal_domain}"
      secretName: *host
  rules:
  - host: *host
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: btc-balance-notifier
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: btc-balance-notifier-oauth2-proxy
  namespace: crypto
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - &host "balance.${personal_domain}"
      secretName: *host
  rules:
  - host: *host
    http:
      paths:
      - path: /oauth2
        pathType: Prefix
        backend:
          service:
            name: btc-balance-notifier-oauth2-proxy
            port:
              number: 80
